--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1104,11 +1104,11 @@
                 }
                 @include web-L {
                     max-width: 1140px;
+                    padding: $p-XS $p-S;
                 }
                 @include web-S() {
                     max-width: initial;
                     margin-left: 0;
-                    padding: $p-XS $p-S;
                 }
                 .logo {
                     display: flex;
@@ -1254,6 +1254,7 @@
                                 }
                             }
                         }
+
                         a {
                             display: block;
                             width: 100%;
@@ -1278,19 +1279,24 @@
                         display: none;
                         text-align: center;
                         position: absolute;
-                        top: 51px;
+                        top: 50px;
                         left: 0;
                         width: 100%;
+                        min-width: 200px;
                         background-color: $primary-dark;
-                        transition: 0.5s;
+                        padding: 0;
+                        border-top: solid 4px $primary-default;
                         a {
-                            h5 {
-                                margin: 0;
-                                padding: $m-XS $m-S;
-                                color: white;
-                                &:hover {
-                                    background-color: $primary-default;
-                                }
+                            transition: 0.3s;
+                            padding: $m-XS $p-S;
+                            text-align: left;
+                            border-bottom: solid 1px rgba($color: white, $alpha: 0.3);
+                            color: white;
+                            &:last-child {
+                                border-bottom: none;
+                            }
+                            &:hover {
+                                background-color: $primary-default;
                             }
                         }
                     }
