--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,7 +21,7 @@ body {
     position: relative;
     background-color: #f1eff0;
     @include mobile-XS() {
-        font-size: 0.775rem;
+        font-size: 0.95rem !important;
     }
     @include navbar();
     @include footer();
@@ -110,7 +110,13 @@ body {
             padding-top: 60px;
             padding-bottom: $p-S;
         }
-
+        .progress {
+            height: 20px;
+            margin-bottom: $p-XXS;
+        }
+        .progress-bar {
+            background-color: $primary-default;
+        }
         .card {
             background-color: white !important;
             padding: $p-M $p-L;
@@ -410,6 +416,7 @@ body {
                     @include mobile-L {
                         padding-bottom: 0;
                     }
+
                     .view-gp {
                         padding: 0;
                         margin: 0;
@@ -421,11 +428,18 @@ body {
                         flex-direction: row;
                         margin-bottom: $m-S;
                         text-align: justify;
+
                         &:nth-last-of-type(1) {
                             margin-bottom: 0;
                         }
                         h5 {
                             width: 100%;
+                        }
+                        h5,
+                        p {
+                            @include mobile-S {
+                                font-size: 0.875rem;
+                            }
                         }
                     }
                     .view-link {
@@ -479,6 +493,25 @@ body {
                             th:nth-child(2) {
                                 @include mobile-L {
                                     width: 65% !important;
+                                }
+                            }
+                        }
+                        td {
+                            ol {
+                                padding: 0;
+                                line-height: 2;
+                                list-style-position: inside;
+                                margin-bottom: $p-XXS;
+                            }
+                            a {
+                                font-weight: bold;
+                                i {
+                                    margin-right: $p-XXS;
+                                }
+                            }
+                            p {
+                                @include mobile-L {
+                                    // font-size: $size-caption;
                                 }
                             }
                         }
