--- a/scss/style.scss
+++ b/scss/style.scss
@@ -632,9 +632,9 @@ body {
                     //     width: 100%;
 
                     // }
-                    .searchbar {
-                        // margin: $m-S 0;
-                    }
+                    // .searchbar {
+                    //     margin: $m-S 0;
+                    // }
                 }
             }
         }
