--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -83,10 +83,10 @@
         line-height: 1.25;
         &:not(:first-of-type) {
             margin-top: $m-S;
-        } 
-        @include mobile-S{
+        }
+        @include mobile-S {
             font-size: $size-h3;
-        }       
+        }
     }
     h3 {
         font-size: $size-h3;
@@ -204,7 +204,7 @@
     h2,
     h3,
     h4,
-    h5{
+    h5 {
         font-weight: bold;
     }
     ::selection {
@@ -325,8 +325,8 @@
         }
         &[type="checkbox"],
         &[type="radio"] {
-            width: 20px;
-            height: 20px;
+            width: 20px !important;
+            height: 20px !important;
             line-height: 2;
             margin-right: $p-XXS;
             display: inline;
@@ -845,7 +845,7 @@
                 }
             }
         }
-    } 
+    }
     //頁碼
     .pagination {
         display: flex;
@@ -1457,7 +1457,7 @@
 
 @mixin form() {
     @include mobile-L() {
-        border-radius: unset;
+        border-radius: initial;
     }
     form {
         border-radius: 20px;
@@ -1602,7 +1602,7 @@
                 }
                 button {
                     font-size: $size-p;
-                    padding: $m-XXS/2 $p-XXS;
+                    padding: 2px $p-XXS;
                     margin-left: $m-XS;
                     margin-bottom: $p-XXS;
                     height: initial;
@@ -1639,6 +1639,21 @@
                     &:not(:nth-last-child(1)) {
                         margin-bottom: $p-XS;
                     }
+                }
+            }
+            .item-withInput {
+                width: 100%;
+                margin-bottom: $m-XS;
+                display: flex;
+                align-items: center;
+                input:not(input[type="checkbox"]) {
+                    width: auto;
+                    &.qty {
+                        width: 100px ;
+                    }
+                }
+                .unit {
+                    margin-left: $m-XS;
                 }
             }
             h5 {
